# xbacklight-notify

./: CMakeLists.txt  LICENSE  README.md
man/: xbacklight-notify.1
src/: CMakeLists.txt  backlight.c  backlight.h  main.c
